[package]
name = "vector-field-visualizer"
version = "0.2.0"
edition = "2021"

[dependencies]
#  wgpu = "22.0.0"
egui = "0.28.1"
raw-window-handle = "0.6.2"
egui-wgpu = { version = "0.28.1",features = ["winit"] }
egui-winit = "0.28.1"
winit = "0.29.4"
pollster = "0.3.0"
bytemuck = "1.16.0"
glam = { version = "0.28.0", features = ["bytemuck"] }
image = "0.25.2"
tobj = {version = "4.0.2", features = ["async"]}
anyhow = "1.0.86"
winit_input_helper = "0.16.0"
tokio = {version = "1.39.3", features = ["full"]}